successfully tested camera module inside docker container

--- a/services/recognition/Dockerfile
+++ b/services/recognition/Dockerfile
@@ -1,7 +1,7 @@
 FROM sgtwilko/rpi-raspbian-opencv
 
 WORKDIR    /service
-COPY       rpi_camera_surveillance_system.py /service/
-RUN        chmod a+x rpi_camera_surveillance_system.py
 
-ENTRYPOINT ["./rpi_camera_surveillance_system.py"]
+COPY       rpi_camera_surveillance_system.py /service/
+
+ENTRYPOINT ["python3","rpi_camera_surveillance_system.py"]
