--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.6'
 services:
   recognition:
     build:
-      context: ./recognition/recognition_container
+      context: ./recognition/recognition.container
     depends_on:
       - messenger
     environment:
@@ -16,7 +16,7 @@ services:
     volumes:
       - /opt/vc:/opt/vc
       - ./shared:/shared
-      - ./recognition/recognition_container/service:/service
+      - ./recognition/service:/service
   messenger:
     image: arm32v7/redis
     ports: 
@@ -28,6 +28,8 @@ services:
       context: ./streaming/streaming.container
     depends_on:
       - messenger
+    ports: 
+      - "8000:8000"
     environment:
       - MESSENGER_HOST=messenger
       - MESSENGER_PORT=6379
@@ -36,5 +38,4 @@ services:
       - ./streaming/service:/service
       
 volumes:
-  shared: 
   messenger_data:
