--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -43,9 +43,8 @@ services:
     depends_on:
       - messenger
       - recognition
-    ports: 
     environment:
-      - MQTT_BROKER=192.168.0.80
+      - MQTT_BROKER="192.168.0.80"
       - MQTT_PORT=1883
     volumes:
       - ./shared:/shared
