implemented and tested MQTT publication of Access requests

--- a/services/publishing/publishing.container/Dockerfile
+++ b/services/publishing/publishing.container/Dockerfile
@@ -28,4 +28,4 @@ RUN         xargs -a dependencies.txt apt-get -f install -y --fix-missing
 
 COPY        entrypoint.sh /
 
-#ENTRYPOINT [ "bash", "./entrypoint.sh" ]
+ENTRYPOINT [ "bash", "./entrypoint.sh" ]
