--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -44,11 +44,12 @@ services:
       - messenger
       - recognition
     environment:
-      - MQTT_BROKER="192.168.0.80"
-      - MQTT_PORT=1883
+      - MQTT_BROKER=broker.hivemq.com
+      - MQTT_PORT=1883         
+      - MESSENGER_HOST=messenger
+      - MESSENGER_PORT=6379
     volumes:
       - ./shared:/shared
-      - ./publishing/service:/service
-      
+      - ./publishing/service:/service    
 volumes:
   messenger_data:
